# SoundPatty

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  INSTALL.mingw  INSTALL.windows  Makefile  README  README.md  config.cfg  config_for_slow.cfg  controller.cpp  controller.h  i586-mingw32msvc.cmake  input.cpp  input.h  jackinput.cpp  jackinput.h  log4j.cfg  logger.cpp  logger.h  main.cpp  main.h  over.sh  readit.cpp  sample.cfg  silence.cfg  soundpatty.cpp  soundpatty.h  wavinput.cpp  wavinput.h  wscript
src/: CMakeLists.txt  aggregate.cpp  aggregate.h  config.h.in  controller.cpp  controller.h  fileinput.cpp  fileinput.h  input.cpp  input.h  jackinput.cpp  jackinput.h  logger.cpp  logger.h  main.cpp  main.h  soundpatty.cpp  soundpatty.h  types.h  wavinput.cpp  wavinput.h  wscript
